# Task17-VectorHoriVert

./: CMakeLists.txt  Profile.cpp  Profile.h  README.md  Rational.cpp  Rational.h  TestRunner.cpp  TestRunner.h  UnitTests.cpp  UnitTests.h  Vector.h  VectorFactory.h  VectorHori.h  VectorVert.h  main.cpp  test.txt
